<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/bottom_home"
    android:title="@string/popular"
    android:icon="@drawable/baseline_local_fire_department_24"/>

    <item
        android:id="@+id/bottom_watchlist"
        android:title="@string/watchlist"
        android:icon="@drawable/baseline_bookmark_24"/>

    <item
        android:id="@+id/bottom_genres"
        android:title="@string/genres"
        android:icon="@drawable/baseline_movie_filter_24"/>

    <item
        android:id="@+id/bottom_maps"
        android:title="@string/maps"
        android:icon="@drawable/baseline_map_24"/>

    <item
        android:id="@+id/bottom_settings"
        android:title="@string/settingss"
        android:icon="@drawable/baseline_account_circle_24"/>
</menu>