<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SettingsFragment"
    android:background="@color/light_background_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:padding="8dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/> <!-- Center the text view horizontally -->

    <!-- CardView containing settings options -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="4dp"
        android:padding="16dp"
        app:cardCornerRadius="30sp"
        android:backgroundTint="#80a4d1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Panel for Dark Mode -->
            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:background="#4c82c7">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/display_settings"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="10dp" />

                <Switch
                    android:id="@+id/dark_mode_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="60dp"
                    android:text="@string/enable_dark_mode" />
            </LinearLayout>



            <!-- Panel for Language Settings -->
            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:background="#4c82c7">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language_settings"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="10dp" />

                <Button
                    android:id="@+id/language_button"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/change_app_language"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/Blue"
                    android:textColor="@android:color/white"/> <!-- Center the button horizontally -->
            </LinearLayout>

            <!-- Panel for Logout -->
            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="8dp"
                android:background="#4c82c7">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_settings"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:layout_marginBottom="10dp" />

                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/Blue"
                    android:textColor="@android:color/white"/> <!-- Center the button horizontally -->
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
